[package]
authors = ["Max Maisel <max.maisel@posteo.de>"]
categories = ["encoding", "network-programming", "no-std", "parser-implementations"]
description = "A Rust implementation of the SMA Speedwire protocol"
edition = "2021"
keywords = ["SMA", "speedwire"]
license = "AGPL-3.0-or-later"
name = "sma-proto"
readme = "README.md"
repository = "https://github.com/mmmaisel/sma-proto/"
rust-version = "1.78.0"
version = "1.0.1"

[lib]
path = "src/lib.rs"

[dependencies]
byteorder-cursor = { version = "1.0.0", default-features = false }
heapless = "0.8.0"
socket2 = { version = "0.5.7", optional = true }
tokio = { version = "1.38.0", features = ["macros", "net", "rt", "time"], optional = true }

[features]
default = ["std"]
client = ["std", "dep:socket2", "dep:tokio"]
std = ["byteorder-cursor/std"]

[package.metadata.docs.rs]
all-features = true
